--- a/public_html/stilus.css
+++ b/public_html/stilus.css
@@ -9,6 +9,8 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
 }
 
 main, header, nav, footer, article {
@@ -28,6 +30,15 @@ header, nav, footer {
 }
 
 article {
-    flex: 1 0 calc(33.33333% - 10px);
+    flex: 0 0 calc(33.33333% - 10px);
     /*width: calc(33.33333% - 10px);*/
+}
+
+main article:nth-child(5) {
+    color: red;
+    order: -1;
+}
+
+header, nav {
+    order: -10;
 }
